--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.port=0
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://114.132.155.61:3306/parcelhub?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.username=Parcelhub
+spring.datasource.password=k7D2YFbKKkF3jnxn
+
+#spring.session.store-type =jdbc
+#spring.session.jdbc.initialize-schema =always
+
+spring.data.redis.host=114.132.155.61
+spring.data.redis.port=6379
+spring.data.redis.password=k7D2YFbKKkF3jnxn
 
