--- a/Client/backstage/package.json
+++ b/Client/backstage/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.7",
+    "element-china-area-data": "^6.1.0",
     "element-plus": "^2.5.4",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
