--- a/Client/forestage/Parcelhub/manifest.json
+++ b/Client/forestage/Parcelhub/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "Parcelhub",
-    "appid" : "",
+    "appid" : "__UNI__70E7381",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
