--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.data.redis.password=k7D2YFbKKkF3jnxn
 mybatis-plus.configuration.map-underscore-to-camel-case=false
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
+minio.endpoint=http://114.132.155.61:9001
+minio.access-key=admin
+minio.secret-key=admin@pwd
+minio.bucket-name=useravatar
