--- a/Client/backstage/package.json
+++ b/Client/backstage/package.json
@@ -14,6 +14,7 @@
     "element-china-area-data": "^6.1.0",
     "element-plus": "^2.5.4",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "sass-loader": "^14.1.1",
     "vue": "^3.3.11",
     "vue-router": "4"
